--- a/assets/css/case_study.css
+++ b/assets/css/case_study.css
@@ -14,9 +14,9 @@
    ========================================================================== */
 
 .h2style {
-  font-size: 30px;
-  font-weight: bold;
-  line-height: 35px;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 40px;
 }   
 
 .par1 {
@@ -29,9 +29,9 @@
 margin-left: 95px;
 margin-top: 20px;
 margin-bottom: 40px;
-font-size: 24px;
+font-size: 26px;
 line-height:30px;
-font-weight: bold;
+font-weight: 400;
 color: #000;
 text-align:left;
 width: 500px;
@@ -151,7 +151,7 @@ h1 {
   color: #fff;
   font-size: 50px;
   line-height: 50px;
-  font-weight: 500;
+  font-weight: bold;
   letter-spacing: -0.01em;
 }
 
@@ -169,9 +169,9 @@ h2 {
 h3 {
   margin-top: 20px;
   margin-bottom: 10px;
-  font-size: 24px;
+  font-size: 26px;
   line-height: 30px;
-  font-weight: bold;
+  font-weight: 400;
 }
 
 h4 {
@@ -2918,6 +2918,7 @@ opacity: 1;
   /*width: 50px;*/
   /*text-align: center;*/
   margin-right: 24px;
+  /* margin-right: 195px; */
   margin-bottom: 26px;
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 auto;
@@ -3095,7 +3096,7 @@ opacity: 1;
   }
 .h2style {
   font-size: 25px;
-  font-weight: bold;
+  font-weight: 600;
   /*margin-left: -151px;*/
   line-height: 37px;
 }
@@ -3104,6 +3105,8 @@ opacity: 1;
 	margin-left: -19px;
 } 
   h1 {
+    margin-top: 15px;
+    font-weight: bold;
     margin-bottom: 24px;
     font-size: 35px;
     line-height: 42px;
@@ -3186,9 +3189,9 @@ opacity: 1;
     margin-top: 20px;
     margin-left: -32px;
     margin-bottom: 40px;
-    font-size: 24px;
+    font-size: 24px;  /*24*/
     line-height: 30px;
-    font-weight: bold;
+    font-weight: bold; /*bold*/
     color: #000;
     text-align: left;
   }
@@ -4344,7 +4347,7 @@ opacity: 1;
 @media screen and (max-width: 767px) {
 	.h2style {
   font-size: 25px;
-  font-weight: bold;
+  font-weight: 600;
   margin-left: -151px;
   line-height: 37px;
 }
